<resources>
    <string name="app_name">Newton Ezy</string>
    <string name="app_version">v%s</string>
    <string name="copyright">Copyright Reserved Pramadhan</string>
    <string name="konfirmasi">Confirm</string>
    <string name="home">Home</string>
    <string name="menu_outstanding">Outstanding</string>
    <string name="menu_solving">Solving</string>
    <string name="menu_report">Report</string>
    <string name="screen_debug">Debug Page</string>

    <string-array name="problems">
        <item>Verification complain</item>
        <item>Verified / Task assign</item>
        <item>Our technician is on the way</item>
        <item>Problem solving</item>
        <item>Problem waiting for approval</item>
    </string-array>
    <string-array name="ic_inactive_problems">
        <item>@drawable/ic_verification_complain_inactive_24dp</item>
        <item>@drawable/ic_verified_inactive_24dp</item>
        <item>@drawable/ic_technician_otw_inactive_24dp</item>
        <item>@drawable/ic_solving_inactive_24dp</item>
        <item>@drawable/ic_waiting_approval_inactive_24dp</item>
    </string-array>
    <integer-array name="ic_active_problems">
        <item>@drawable/ic_verification_complain_active_24dp</item>
        <item>@drawable/ic_verified_active_24dp</item>
        <item>@drawable/ic_technician_otw_active_24dp</item>
        <item>@drawable/ic_solving_active_24dp</item>
        <item>@drawable/ic_waiting_approval_active_24dp</item>
    </integer-array>

    <!-- prefs key-->
    <string name="key_first_time_user">key_first_time_user</string>
    <string name="key_token">key_token</string>
    <string name="key_firebase_token">key_firebase_token</string>
    <string name="key_firebase_message_payload">key_firebase_message_payload</string>
    <string name="key_ongoing_problem">key_ongoing_problem</string>

    <!-- error messages-->
    <string name="error_failed_sending_firebase_token">ERROR: failed sending firebase token</string>
    <string name="error_null_firebase_token">ERROR: firebase token is null</string>
    <string name="error_imei_not_found">IMEI not found</string>
    <string name="error_read_phone_state_not_allowed">Permission read phone state not allowed</string>
    <string name="error_blank_fields">Please fill the empty fields</string>
    <string name="error_incorrect_data">Please input correct data</string>
    <string name="error_null_response">ERROR: server not responding</string>
    <string name="error_bad_token">Session ended. Token bad format.\nPlease login again</string>
    <string name="error_session_not_valid">Invalid session. Automatically logout</string>
    <string name="error_failed_refresh_data">Couldn\'t refresh data</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_problem_not_found">Problem not found. Make sure you input the right customer id and printer id</string>
    <string name="error_unable_taking_job">Unable taking job. Please finish the on-going job</string>
    <string name="error_empty_otp">Please insert customer OTP</string>
    <string name="error_empty_rate">Please rate us</string>
    <string name="error_empty_report_detail">No report detail found</string>
    <string name="error_crash_test">crash_test</string>
    <string name="error_otp_null">Lakukan scan id printer ulang untuk mendapatkan OTP</string>
    <string name="error_otp_count_down_crash">Found OTP countdown error. Please kindly report to us</string>
    <string name="error_pic_name_unavailable">nama pic tidak tersedia</string>
    <string name="error_pic_phone_unavailable">tidak tersedia</string>
    <string name="error_problem_desc_unavailable">problem note tidak tersedia</string>

    <!-- warning messages-->
    <string name="warning_message_rationale_all_permissions">Please granted all required permissions for optimal use</string>
    <string name="warning_message_rationale_read_phone_state">Please granted telephone permission for dialing phone</string>
    <string name="warning_message_open_camera_for_scanning">Click here for scanning</string>

    <!-- success messages-->
    <string name="success_message_firebase_token_sent">Firebase token sent successfully</string>
    <string name="success_message_login">Login successful</string>
    <string name="success_message_empty_data_item">No item</string>
    <string name="success_message_approved">Thanks for your approval</string>
    <string name="success_message_request_forget_password">Request remember password sent successfully. Waiting for approval</string>
    <string name="success_message_no_ongoing_problem">There is no ongoing problem</string>

    <!-- progress messages-->
    <!-- technician -->
    <string name="progress_send_request_forget_password">Sending request</string>
    <string name="progress_login">Verifying account</string>
    <string name="progress_loading">Loading data please wait</string>
    <string name="progress_taking_outstanding_job">Sending request taking job</string>
    <string name="progress_getting_latest_tracking">Getting latest tracking progress</string>
    <string name="progress_verifying_kunjungan">Verifying</string>
    <string name="progress_solved">Please wait</string>
    <string name="progress_hold">Please wait</string>
    <string name="progress_approve">Approving please wait</string>
    <string name="progress_getting_reports">Downloading reports</string>
    <string name="progress_tracking">Please wait</string>
    <string name="progress_logout">Sigining out</string>

    <!--customer -->
    <string name="progress_send_complain">Sending complain and verifying</string>
    <string name="progress_update_complain">Updating complain</string>

    <string name="label_scan_instruction">Scan QR code to get printer id</string>
    <string name="label_scan_qr_code">Printer ID</string>
    <string name="label_id_customer">Customer ID</string>
    <string name="label_note">Note :</string>
    <string name="label_note_available">N/A</string>
    <string name="label_more">Tampilkan lebih banyak</string>
    <string name="label_less">Kurangi</string>

    <string name="dummy_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
