<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/outstanding.item.iv.ic_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_home_green_24dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/outstanding.item.tv.customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/outstanding.item.iv.ic_task"
            android:text="Customer 1"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/outstanding.item.tv.address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outstanding.item.iv.ic_task"
            android:gravity="start|end"
            android:text="Jl. Boulevard Jakarta Timur" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/outstanding.item.tv.problem.desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outstanding.item.tv.address"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/error_problem_desc_unavailable"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/outstanding.item.tv.pic.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outstanding.item.tv.problem.desc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/error_pic_name_unavailable"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/outstanding.item.tv.pic.telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/outstanding.item.tv.pic.name"
            android:drawableStart="@drawable/ic_phone_24dp"
            android:text="@string/error_pic_phone_unavailable" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>