<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newtonapp.view.ui.DashboardActivity">

    <RelativeLayout
        android:id="@+id/dashboard.layout.profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dashboard.tv.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rangga bagas"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dashboard.tv.id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/dashboard.tv.name"
            android:text="0234-242-123"
            android:textSize="20sp"/>

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/dashboard.iv.profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:id="@+id/dashboard.view.line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/dashboard.layout.profile"/>

    <GridLayout
        android:id="@+id/dashboard.layout.menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:columnCount="1"
        android:rowCount="1"
        android:orientation="horizontal"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        app:layout_constraintTop_toBottomOf="@id/dashboard.view.line"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard.iv.outstanding"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:layout_column="0"
                android:layout_row="0">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_outstanding"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/menu_outstanding"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard.iv.solving"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:layout_column="1"
                android:layout_row="0">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_solving"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/menu_solving"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard.iv.report"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:layout_column="2"
                android:layout_row="0">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_report"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/menu_report"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
